--- a/hiking/react-hiking/package.json
+++ b/hiking/react-hiking/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "^5.0.1",
     "react-router": "6.4.0",
     "react-router-dom": "6.4.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "http://localhost:5000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,3 +40,5 @@
     ]
   }
 }
+
+
