--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,12 @@ hiking/react-hiking/npm-debug.log*
 hiking/react-hiking/yarn-debug.log*
 hiking/react-hiking/yarn-error.log*
 
-#config file
+#config file, react
 hiking/react-hiking/.env
+#config file, python
+hiking/react-hiking/backend-hiking/.env
 
 #Flask
 hiking/react-hiking/backend-hiking/env
 hiking/react-hiking/backend-hiking/__pycache__
+hiking/react-hiking/backend-hiking/models/__pycache__
