--- a/hiking/backend-hiking/requirements.txt
+++ b/hiking/backend-hiking/requirements.txt
@@ -1,14 +1,26 @@
+blinker==1.6.2
 click==8.1.3
 colorama==0.4.6
-Flask==2.2.3
-Flask-SQLAlchemy==3.0.3
-greenlet==2.0.2
+contourpy==1.0.6
+cycler==0.11.0
+distlib==0.3.6
+filelock==3.9.0
+Flask==2.3.1
+fonttools==4.38.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.4
 MarkupSafe==2.1.2
-psycopg2==2.9.5
-python-decouple==3.7
-python-dotenv==0.21.1
-SQLAlchemy==2.0.4
-typing_extensions==4.5.0
-Werkzeug==2.2.3
+matplotlib==3.6.2
+numpy==1.23.5
+packaging==21.3
+pandas==1.5.1
+Pillow==9.3.0
+platformdirs==3.0.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.6
+six==1.16.0
+sklearn==0.0.post1
+virtualenv==20.19.0
+Werkzeug==2.3.1
