--- a/hiking/react-hiking/package.json
+++ b/hiking/react-hiking/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://127.0.0.1:5000",
   "//": "proxy: http://localhost:5000 needed for flask routing, errors with npm install",
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@rsuite/icons": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
