--- a/hiking/backend-hiking/requirements.txt
+++ b/hiking/backend-hiking/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.2
 blinker==1.6.2
 cachelib==0.10.2
 click==8.1.3
@@ -12,6 +13,7 @@ Flask-Session==0.4.0
 Flask-SQLAlchemy==3.0.3
 fonttools==4.38.0
 greenlet==2.0.2
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
@@ -23,15 +25,21 @@ pandas==1.5.1
 passlib==1.7.4
 Pillow==9.3.0
 platformdirs==3.0.0
+pluggy==1.0.0
 psycopg2-binary==2.9.6
 pyparsing==3.0.9
+pytest==7.3.1
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2022.6
 six==1.16.0
 sklearn==0.0.post1
+soupsieve==2.4.1
 SQLAlchemy==2.0.11
 typing_extensions==4.5.0
 virtualenv==20.19.0
+waitress==2.1.2
+WebOb==1.8.7
+WebTest==3.0.0
 Werkzeug==2.3.1
