--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: hiking/react-hiking/package-lock.json
     - run: npm ci
+      working-directory: './hiking/react-hiking/'
     - run: npm run build --if-present
+      working-directory: './hiking/react-hiking/'
     - run: npm test
+      working-directory: './hiking/react-hiking/'
+
