--- a/hiking/react-hiking/package.json
+++ b/hiking/react-hiking/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
     "react-router": "6.4.0",
     "react-router-dom": "6.4.0",
