--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,6 @@ jobs:
       working-directory: './hiking/react-hiking/'
     - run: npm run build --if-present
       working-directory: './hiking/react-hiking/'
+    - run: npm test
+      working-directory: './hiking/react-hiking/'
 
