--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ hiking/backend-hiking/env
 hiking/backend-hiking/services/__pycache__
 hiking/backend-hiking/views/__pycache__
 hiking/backend-hiking/__pycache__
+hiking/backend-hiking/data/__pycache__
 hiking/backend-hiking/flask_session
 hiking/backend-hiking/views/flask_session
 hiking/backend-hiking/models/__pycache__
