--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ hiking/react-hiking/yarn-error.log*
 
 #config file, react
 hiking/react-hiking/.env
+hiking/react-hiking/.env.test
+
 #config file, python
 hiking/backend-hiking/.env
 
