--- a/hiking/react-hiking/package.json
+++ b/hiking/react-hiking/package.json
@@ -18,11 +18,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
     "react-router": "6.4.0",
     "react-router-dom": "6.4.0",
     "react-scripts": "^5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "rsuite": "^5.27.0",
     "web-vitals": "^2.1.4"
   },
@@ -56,9 +58,8 @@
     "@babel/preset-react": "^7.18.6",
     "babel-jest": "^29.5.0",
     "dotenv": "^16.0.3",
-    "jest": "^27.5.1"  
-  }
-  ,
+    "jest": "^27.5.1"
+  },
   "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
